// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user .delete() : fails trying to delete a user with a nonexistent user 1`] = `[JsonRpcError: no such user nonexistentId]`;

exports[`user .delete() : fails trying to delete itself 1`] = `[JsonRpcError: a user cannot delete itself]`;

exports[`user .getAll() : gets all the users created 1`] = `
Array [
  Object {
    "email": "wayne4@vates.fr",
    "groups": Array [],
    "permission": "user",
    "preferences": Object {},
  },
  Object {
    "email": "wayne5@vates.fr",
    "groups": Array [],
    "permission": "user",
    "preferences": Object {},
  },
]
`;

exports[`user create a user failed with an email already used 1`] = `[JsonRpcError: unknown error from the peer]`;

exports[`user create a user failed without email 1`] = `[JsonRpcError: invalid parameters]`;

exports[`user create a user failed without password 1`] = `[JsonRpcError: invalid parameters]`;

exports[`user create a user successfully with permission 1`] = `
Object {
  "email": "wayne2@vates.fr",
  "groups": Array [],
  "permission": "user",
  "preferences": Object {},
}
`;

exports[`user create a user successfully without permission 1`] = `
Object {
  "email": "wayne1@vates.fr",
  "groups": Array [],
  "preferences": Object {},
}
`;
